[CrOS MultiDevice] Add DeviceConnectedStateChanged() observer callback.

This callback allows Bluetooth clients on Chrome OS to listen for
connection state changes (i.e., when a device goes from connected to
disconnected or vice versa).

A follow-up CL will add handling for this event in the SecureChannel
service to prevent us from accidentally attempting to connect to a
disconnecting device (see https://crbug.com/898334).

Bug: 898334
Change-Id: Icc18f44106d12a881518f0ece3f0a6e9dd715c0b
Reviewed-on: https://chromium-review.googlesource.com/c/1347204
Reviewed-by: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Commit-Queue: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610307}
Former-commit-id: 1feb34d303cbd035e8f4b678afe0523f484d5007