device/bluetooth/test/test_bluetooth_adapter_observer.h
@@ -49,6 +49,9 @@ class TestBluetoothAdapterObserver : public BluetoothAdapter::Observer {
                                    device::BluetoothDevice* device,
                                    int16_t rssi,
                                    const std::vector<uint8_t>& eir) override;
+  void DeviceConnectedStateChanged(device::BluetoothAdapter* adapter,
+                                   device::BluetoothDevice* device,
+                                   bool is_now_connected) override;
 #endif
   void DeviceRemoved(BluetoothAdapter* adapter,
                      BluetoothDevice* device) override;
@@ -110,6 +113,9 @@ class TestBluetoothAdapterObserver : public BluetoothAdapter::Observer {
     return device_advertisement_received_count_;
   }
   const std::vector<uint8_t>& device_eir() const { return device_eir_; }
+  const std::vector<bool>& device_connected_state_changed_values() const {
+    return device_connected_state_changed_values_;
+  }
 #endif
   int device_removed_count() const { return device_removed_count_; }
   BluetoothDevice* last_device() const { return last_device_; }
@@ -197,6 +203,7 @@ class TestBluetoothAdapterObserver : public BluetoothAdapter::Observer {
   uint16_t device_mtu_;
   int device_advertisement_received_count_;
   std::vector<uint8_t> device_eir_;
+  std::vector<bool> device_connected_state_changed_values_;
 #endif
   int device_removed_count_;
   BluetoothDevice* last_device_;
